# Luddite-Project-Template

./: .ccls  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  README.md
Assets/Shaders/: Basic.ldshader
src/: App.cpp  pch.hpp
